--- a/FoodPath--Camera/FoodPath--Camera/Base.lproj/Main.storyboard
+++ b/FoodPath--Camera/FoodPath--Camera/Base.lproj/Main.storyboard
@@ -66,20 +66,20 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="IngredientsCell" id="Scg-T5-zJ1" customClass="IngredientsCell" customModule="FoodPath__Camera" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43"/>
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Scg-T5-zJ1" id="ePc-Ne-l0g">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ingredient Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="APY-lS-VDg">
-                                                    <rect key="frame" x="142" y="11" width="130" height="21"/>
+                                                    <rect key="frame" x="142" y="11" width="130" height="21.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" preferredStyle="sliding" translatesAutoresizingMaskIntoConstraints="NO" id="mFo-AN-caJ">
-                                                    <rect key="frame" x="30" y="6" width="51" height="31"/>
+                                                    <rect key="frame" x="30" y="6.5" width="51" height="31"/>
                                                     <connections>
                                                         <action selector="didCheckIngredient:" destination="BYZ-38-t0r" eventType="valueChanged" id="f7o-d4-Pry"/>
                                                     </connections>
@@ -246,7 +246,7 @@
                                     <navigationItem id="BCj-8V-oa6">
                                         <barButtonItem key="leftBarButtonItem" title="&lt; Back" id="2Lx-0C-LVZ">
                                             <connections>
-                                                <segue destination="BYZ-38-t0r" kind="presentation" id="XtR-PY-yib"/>
+                                                <segue destination="PS4-iU-taH" kind="unwind" unwindAction="unwindToStream:" id="18x-fN-11e"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -341,6 +341,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R6D-uX-8En" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="PS4-iU-taH" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="-617" y="796"/>
         </scene>
@@ -362,7 +363,7 @@
                                     <navigationItem title="Recognized Food Dishes" id="gaa-v5-mll">
                                         <barButtonItem key="leftBarButtonItem" title="&lt; Back" id="g8V-ZB-yDm">
                                             <connections>
-                                                <segue destination="hSK-M5-XfM" kind="unwind" identifier="goBack" unwindAction="unwindWithSegue:" id="huL-LC-vCq"/>
+                                                <segue destination="hSK-M5-XfM" kind="unwind" identifier="goBack" unwindAction="unwindToImageRecog:" id="huL-LC-vCq"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -408,7 +409,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gyS-BT-uj1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="hSK-M5-XfM" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="234.78260869565219" y="810.9375"/>
+            <point key="canvasLocation" x="281" y="796"/>
         </scene>
         <!--Recipes Screen View Controller-->
         <scene sceneID="xfM-5k-Jdf">
@@ -419,27 +420,32 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You've selected" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PhN-Gt-PKq">
-                                <rect key="frame" x="140" y="64" width="134" height="23"/>
+                                <rect key="frame" x="140" y="98" width="134" height="23"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="134" id="8Ld-fo-hiB"/>
+                                    <constraint firstAttribute="height" constant="23" id="osO-LE-9c0"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="foodCover" translatesAutoresizingMaskIntoConstraints="NO" id="kQH-lj-dgQ">
-                                <rect key="frame" x="146.5" y="95" width="121" height="94"/>
+                                <rect key="frame" x="146.5" y="129" width="121" height="94"/>
                                 <constraints>
+                                    <constraint firstAttribute="width" secondItem="kQH-lj-dgQ" secondAttribute="height" multiplier="121:94" id="3kG-eE-lWr"/>
                                     <constraint firstAttribute="width" constant="121" id="QKT-N1-Whx"/>
                                     <constraint firstAttribute="height" constant="94" id="x1R-Kk-G8x"/>
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plate" translatesAutoresizingMaskIntoConstraints="NO" id="ecg-ba-9ye">
-                                <rect key="frame" x="156.5" y="197" width="101" height="104"/>
+                                <rect key="frame" x="156.5" y="231" width="101" height="104"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="104" id="4Qs-pa-Kuz"/>
                                     <constraint firstAttribute="width" constant="101" id="i4r-He-rnz"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Risotto" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gkx-cs-OO9">
-                                <rect key="frame" x="156.5" y="197" width="101" height="42"/>
+                                <rect key="frame" x="156.5" y="231" width="101" height="42"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="101" id="ZAg-r1-9Kh"/>
                                     <constraint firstAttribute="height" constant="42" id="jBE-Ug-TES"/>
@@ -448,14 +454,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Look at recipes:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZQY-qX-Dix">
-                                <rect key="frame" x="140" y="327" width="134" height="23"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="42Y-Zq-NMu">
-                                <rect key="frame" x="0.0" y="358" width="414" height="453"/>
+                                <rect key="frame" x="0.0" y="376" width="414" height="453"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="42Y-Zq-NMu" secondAttribute="height" multiplier="138:151" id="Qvm-Vl-BLg"/>
@@ -491,25 +491,45 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y1Y-WM-eoM">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <items>
+                                    <navigationItem id="yMK-dg-73t">
+                                        <barButtonItem key="leftBarButtonItem" title="&lt; Back" id="Z6a-a6-hyG">
+                                            <connections>
+                                                <action selector="unwindSegueBackButton:" destination="hS5-2Z-XwQ" id="sWn-yw-ecx"/>
+                                                <segue destination="skj-WE-cKe" kind="unwind" identifier="backToFoodPickerFromImageRecog" unwindAction="unwindToFoodPickerFromImageRecog:" id="9Rw-OP-1Rl"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Look at recipes:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZQY-qX-Dix">
+                                <rect key="frame" x="140" y="343" width="134" height="23"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="b9y-l6-tNN"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="gkx-cs-OO9" firstAttribute="top" secondItem="kQH-lj-dgQ" secondAttribute="bottom" constant="8" symbolic="YES" id="8ed-ug-5yV"/>
-                            <constraint firstItem="42Y-Zq-NMu" firstAttribute="top" secondItem="ZQY-qX-Dix" secondAttribute="bottom" constant="8" symbolic="YES" id="CT9-a3-X18"/>
-                            <constraint firstItem="ZQY-qX-Dix" firstAttribute="top" secondItem="ecg-ba-9ye" secondAttribute="bottom" constant="26" id="DMc-ry-LV4"/>
-                            <constraint firstItem="gkx-cs-OO9" firstAttribute="centerX" secondItem="vgA-oF-aW8" secondAttribute="centerX" id="JC3-sF-vnM"/>
-                            <constraint firstItem="PhN-Gt-PKq" firstAttribute="centerX" secondItem="vgA-oF-aW8" secondAttribute="centerX" id="JtD-ZH-xYV"/>
-                            <constraint firstItem="ecg-ba-9ye" firstAttribute="centerX" secondItem="vgA-oF-aW8" secondAttribute="centerX" id="NLJ-uz-fon"/>
-                            <constraint firstItem="42Y-Zq-NMu" firstAttribute="centerX" secondItem="vgA-oF-aW8" secondAttribute="centerX" id="RGA-e3-ca4"/>
-                            <constraint firstItem="42Y-Zq-NMu" firstAttribute="leading" secondItem="b9y-l6-tNN" secondAttribute="leading" id="VRx-MH-I9o"/>
-                            <constraint firstItem="42Y-Zq-NMu" firstAttribute="trailing" secondItem="b9y-l6-tNN" secondAttribute="trailing" id="bIY-Rh-I8H"/>
-                            <constraint firstItem="kQH-lj-dgQ" firstAttribute="centerX" secondItem="vgA-oF-aW8" secondAttribute="centerX" id="bKl-Zq-IlG"/>
-                            <constraint firstItem="ecg-ba-9ye" firstAttribute="top" secondItem="gkx-cs-OO9" secondAttribute="bottom" constant="-42" id="bfB-I3-TwO"/>
-                            <constraint firstItem="PhN-Gt-PKq" firstAttribute="top" secondItem="b9y-l6-tNN" secondAttribute="top" constant="20" id="cN9-ou-AE9"/>
-                            <constraint firstItem="ecg-ba-9ye" firstAttribute="centerX" secondItem="vgA-oF-aW8" secondAttribute="centerX" id="i9w-Fc-3vy"/>
-                            <constraint firstItem="ZQY-qX-Dix" firstAttribute="centerX" secondItem="vgA-oF-aW8" secondAttribute="centerX" id="rkI-vc-W7M"/>
-                            <constraint firstItem="kQH-lj-dgQ" firstAttribute="top" secondItem="PhN-Gt-PKq" secondAttribute="bottom" constant="8" symbolic="YES" id="vOX-xn-eKx"/>
+                            <constraint firstItem="42Y-Zq-NMu" firstAttribute="centerX" secondItem="ZQY-qX-Dix" secondAttribute="centerX" id="Ch9-yM-1Jy"/>
+                            <constraint firstItem="42Y-Zq-NMu" firstAttribute="trailing" secondItem="Y1Y-WM-eoM" secondAttribute="trailing" id="Kgx-wU-U4n"/>
+                            <constraint firstItem="42Y-Zq-NMu" firstAttribute="leading" secondItem="vgA-oF-aW8" secondAttribute="leading" id="McX-aS-FJQ"/>
+                            <constraint firstItem="PhN-Gt-PKq" firstAttribute="centerX" secondItem="vgA-oF-aW8" secondAttribute="centerX" id="TbT-lf-zws"/>
+                            <constraint firstItem="ecg-ba-9ye" firstAttribute="top" secondItem="gkx-cs-OO9" secondAttribute="bottom" constant="-42" id="UPZ-NS-d1A"/>
+                            <constraint firstItem="b9y-l6-tNN" firstAttribute="bottom" secondItem="42Y-Zq-NMu" secondAttribute="bottom" constant="33" id="YhB-MH-ee3"/>
+                            <constraint firstItem="42Y-Zq-NMu" firstAttribute="centerX" secondItem="gkx-cs-OO9" secondAttribute="centerX" id="aX6-0a-l14"/>
+                            <constraint firstItem="42Y-Zq-NMu" firstAttribute="top" secondItem="ZQY-qX-Dix" secondAttribute="bottom" constant="10" id="axF-JC-LMg"/>
+                            <constraint firstItem="kQH-lj-dgQ" firstAttribute="top" secondItem="PhN-Gt-PKq" secondAttribute="bottom" constant="8" symbolic="YES" id="e9R-U7-39Q"/>
+                            <constraint firstItem="ZQY-qX-Dix" firstAttribute="top" secondItem="ecg-ba-9ye" secondAttribute="bottom" constant="8" symbolic="YES" id="fMg-mN-Sxk"/>
+                            <constraint firstItem="PhN-Gt-PKq" firstAttribute="top" secondItem="Y1Y-WM-eoM" secondAttribute="bottom" constant="10" id="gQF-6n-6TS"/>
+                            <constraint firstItem="42Y-Zq-NMu" firstAttribute="centerX" secondItem="PhN-Gt-PKq" secondAttribute="centerX" id="jey-tw-ktG"/>
+                            <constraint firstItem="42Y-Zq-NMu" firstAttribute="leading" secondItem="Y1Y-WM-eoM" secondAttribute="leading" id="qTI-an-L77"/>
+                            <constraint firstItem="42Y-Zq-NMu" firstAttribute="centerX" secondItem="ecg-ba-9ye" secondAttribute="centerX" id="tHa-Rp-aft"/>
+                            <constraint firstItem="42Y-Zq-NMu" firstAttribute="centerX" secondItem="kQH-lj-dgQ" secondAttribute="centerX" id="vIe-vZ-GvV"/>
+                            <constraint firstItem="gkx-cs-OO9" firstAttribute="top" secondItem="kQH-lj-dgQ" secondAttribute="bottom" constant="8" symbolic="YES" id="yyq-4U-EdU"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="lR8-TI-v3Y"/>
@@ -518,6 +538,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wrV-2E-YDT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="skj-WE-cKe" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1534.7826086956522" y="519.64285714285711"/>
         </scene>
